# guicollection

./: .gitmodules  CMakeLists.txt  README.md  make.bat
GUICollection/: CMakeLists.txt  GUICollection.cpp  GUICollection.h  GUICollection.ipp  GUIExtension_Notifications.cpp  GUIExtension_Notifications.h  MacroTemplates.h  Utilities.h  main.cpp
